--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
                 </button>
                 <!-- the logo -->
                 <div class="sidebar-logo">
-                    <a href="#">INM320SDD320</a>
+                    <a href="#">INM320SDD</a>
                 </div>
             </div>
             <!-- navigation elements for the sidebar-->
